src/Kriti/Parser/Grammar.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from src/Kriti/Parser/Grammar.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parser -> expr                              (0)
	expr -> expr '>' expr                              (1)
	expr -> expr '<' expr                              (2)
	expr -> expr '>=' expr                             (3)
	expr -> expr '<=' expr                             (4)
	expr -> expr '!=' expr                             (5)
	expr -> expr '==' expr                             (6)
	expr -> expr '&&' expr                             (7)
	expr -> expr '||' expr                             (8)
	expr -> expr 'in' expr                             (9)
	expr -> expr '??' expr                             (10)
	expr -> atom                                       (11)
	expr -> var '(' expr ')'                           (12)
	expr -> '(' expr ')'                               (13)
	expr -> '{{' expr '}}'                             (14)
	atom -> string_template                            (15)
	atom -> num_lit                                    (16)
	atom -> boolean                                    (17)
	atom -> null                                       (18)
	atom -> array                                      (19)
	atom -> object                                     (20)
	atom -> fields                                     (21)
	atom -> iff                                        (22)
	atom -> range                                      (23)
	var -> ident                                       (24)
	string_template -> 's"' string_template_ '"e'      (25)
	string_template -> 's"' '"e'                       (26)
	string_template_ -> string_template_ '{{' template '}}'   (27)
	string_template_ -> string_template_ string        (28)
	string_template_ -> '{{' template '}}'             (29)
	string_template_ -> string                         (30)
	template -> boolean                                (31)
	template -> num_lit                                (32)
	template -> fields                                 (33)
	template -> var '(' expr ')'                       (34)
	num_lit -> number                                  (35)
	num_lit -> int                                     (36)
	boolean -> 'true'                                  (37)
	boolean -> 'false'                                 (38)
	null -> 'null'                                     (39)
	array -> '[' list_elements ']'                     (40)
	array -> '[' ']'                                   (41)
	list_elements -> expr                              (42)
	list_elements -> list_elements ',' expr            (43)
	object -> '{' object_fields '}'                    (44)
	object -> '{' '}'                                  (45)
	object_fields -> object_field                      (46)
	object_fields -> object_fields ',' object_field    (47)
	object_field -> 's"' object_key '"e' ':' expr      (48)
	object_field -> 's"' '"e' ':' expr                 (49)
	object_key -> object_key string                    (50)
	object_key -> string                               (51)
	fields -> var many__field__                        (52)
	field -> '.' ident                                 (53)
	field -> '?' '.' ident                             (54)
	field -> '?' '[' '\'' string '\'' ']'              (55)
	field -> '[' '\'' string '\'' ']'                  (56)
	field -> '[' expr ']'                              (57)
	field -> '?' '[' expr ']'                          (58)
	iff -> '{{' 'if' expr '}}' expr '{{' 'else' '}}' expr '{{' 'end' '}}'   (59)
	range -> '{{' 'range' mident ',' ident ':=' expr '}}' expr '{{' 'end' '}}'   (60)
	mident -> '_'                                      (61)
	mident -> ident                                    (62)
	many__field__ -> many_rev__field__                 (63)
	many_rev__field__ ->                               (64)
	many_rev__field__ -> many_rev__field__ field       (65)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	number         { TokNumLit _ $$ }
	int            { TokIntLit _ $$ }
	'true'         { TokBoolLit $$ }
	'false'        { TokBoolLit $$ }
	's"'           { TokSymbol (Loc $$ SymStringBegin) }
	'"e'           { TokSymbol (Loc $$ SymStringEnd) }
	string         { TokStringLit $$ }
	'if'           { TokIdentifier (Loc $$ "if") }
	'else'         { TokIdentifier (Loc $$ "else") }
	'end'          { TokIdentifier (Loc $$ "end") }
	'null'         { TokIdentifier (Loc $$ "null" ) }
	'range'        { TokIdentifier (Loc $$ "range") }
	'in'           { TokIdentifier (Loc $$ "in") }
	ident          { TokIdentifier $$ }
	'\''           { TokSymbol (Loc $$ SymSingleQuote) }
	':'            { TokSymbol (Loc $$ SymColon) }
	'.'            { TokSymbol (Loc $$ SymDot) }
	','            { TokSymbol (Loc $$ SymComma) }
	'?'            { TokSymbol (Loc $$ SymQuestionMark) }
	'??'           { TokSymbol (Loc $$ SymDoubleQuestionMark) }
	'=='           { TokSymbol (Loc $$ SymEq) }
	'!='           { TokSymbol (Loc $$ SymNotEq) }
	'>'            { TokSymbol (Loc $$ SymGt) }
	'<'            { TokSymbol (Loc $$ SymLt) }
	'<='           { TokSymbol (Loc $$ SymLte) }
	'>='           { TokSymbol (Loc $$ SymGte) }
	'&&'           { TokSymbol (Loc $$ SymAnd) }
	'||'           { TokSymbol (Loc $$ SymOr) }
	'_'            { TokSymbol (Loc $$ SymUnderscore) }
	':='           { TokSymbol (Loc $$ SymAssignment) }
	'{'            { TokSymbol (Loc $$ SymCurlyOpen) }
	'}'            { TokSymbol (Loc $$ SymCurlyClose) }
	'{{'           { TokSymbol (Loc $$ SymDoubleCurlyOpen) }
	'}}'           { TokSymbol (Loc $$ SymDoubleCurlyClose) }
	'['            { TokSymbol (Loc $$ SymSquareOpen) }
	']'            { TokSymbol (Loc $$ SymSquareClose) }
	'('            { TokSymbol (Loc $$ SymParenOpen) }
	')'            { TokSymbol (Loc $$ SymParenClose) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parser   rule  0
	expr            rules 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14
	atom            rules 15, 16, 17, 18, 19, 20, 21, 22, 23
	var             rule  24
	string_template rules 25, 26
	string_template_ rules 27, 28, 29, 30
	template        rules 31, 32, 33, 34
	num_lit         rules 35, 36
	boolean         rules 37, 38
	null            rule  39
	array           rules 40, 41
	list_elements   rules 42, 43
	object          rules 44, 45
	object_fields   rules 46, 47
	object_field    rules 48, 49
	object_key      rules 50, 51
	fields          rule  52
	field           rules 53, 54, 55, 56, 57, 58
	iff             rule  59
	range           rule  60
	mident          rules 61, 62
	many__field__   rule  63
	many_rev__field__ rules 64, 65

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parser -> . expr                             (rule 0)

	number         shift, and enter state 14
	int            shift, and enter state 15
	'true'         shift, and enter state 16
	'false'        shift, and enter state 17
	's"'           shift, and enter state 18
	'null'         shift, and enter state 19
	ident          shift, and enter state 20
	'{'            shift, and enter state 21
	'{{'           shift, and enter state 22
	'['            shift, and enter state 23
	'('            shift, and enter state 24

	expr           goto state 25
	atom           goto state 3
	var            goto state 4
	string_templategoto state 5
	num_lit        goto state 6
	boolean        goto state 7
	null           goto state 8
	array          goto state 9
	object         goto state 10
	fields         goto state 11
	iff            goto state 12
	range          goto state 13

State 1

	expr -> . expr '>' expr                             (rule 1)

	number         shift, and enter state 14
	int            shift, and enter state 15
	'true'         shift, and enter state 16
	'false'        shift, and enter state 17
	's"'           shift, and enter state 18
	'null'         shift, and enter state 19
	ident          shift, and enter state 20
	'{'            shift, and enter state 21
	'{{'           shift, and enter state 22
	'['            shift, and enter state 23
	'('            shift, and enter state 24

	expr           goto state 2
	atom           goto state 3
	var            goto state 4
	string_templategoto state 5
	num_lit        goto state 6
	boolean        goto state 7
	null           goto state 8
	array          goto state 9
	object         goto state 10
	fields         goto state 11
	iff            goto state 12
	range          goto state 13

State 2

	expr -> expr . '>' expr                             (rule 1)
	expr -> expr . '<' expr                             (rule 2)
	expr -> expr . '>=' expr                            (rule 3)
	expr -> expr . '<=' expr                            (rule 4)
	expr -> expr . '!=' expr                            (rule 5)
	expr -> expr . '==' expr                            (rule 6)
	expr -> expr . '&&' expr                            (rule 7)
	expr -> expr . '||' expr                            (rule 8)
	expr -> expr . 'in' expr                            (rule 9)
	expr -> expr . '??' expr                            (rule 10)

	'in'           shift, and enter state 26
	'??'           shift, and enter state 27
	'=='           shift, and enter state 28
	'!='           shift, and enter state 29
	'>'            shift, and enter state 30
	'<'            shift, and enter state 31
	'<='           shift, and enter state 32
	'>='           shift, and enter state 33
	'&&'           shift, and enter state 34
	'||'           shift, and enter state 35


State 3

	expr -> atom .                                      (rule 11)

	'in'           reduce using rule 11
	','            reduce using rule 11
	'??'           reduce using rule 11
	'=='           reduce using rule 11
	'!='           reduce using rule 11
	'>'            reduce using rule 11
	'<'            reduce using rule 11
	'<='           reduce using rule 11
	'>='           reduce using rule 11
	'&&'           reduce using rule 11
	'||'           reduce using rule 11
	'}'            reduce using rule 11
	'{{'           reduce using rule 11
	'}}'           reduce using rule 11
	']'            reduce using rule 11
	')'            reduce using rule 11
	%eof           reduce using rule 11


State 4

	expr -> var . '(' expr ')'                          (rule 12)
	fields -> var . many__field__                       (rule 52)

	'in'           reduce using rule 64
	'.'            reduce using rule 64
	','            reduce using rule 64
	'?'            reduce using rule 64
	'??'           reduce using rule 64
	'=='           reduce using rule 64
	'!='           reduce using rule 64
	'>'            reduce using rule 64
	'<'            reduce using rule 64
	'<='           reduce using rule 64
	'>='           reduce using rule 64
	'&&'           reduce using rule 64
	'||'           reduce using rule 64
	'}'            reduce using rule 64
	'{{'           reduce using rule 64
	'}}'           reduce using rule 64
	'['            reduce using rule 64
	']'            reduce using rule 64
	'('            shift, and enter state 53
	')'            reduce using rule 64
	%eof           reduce using rule 64

	many__field__  goto state 51
	many_rev__field__goto state 52

State 5

	atom -> string_template .                           (rule 15)

	'in'           reduce using rule 15
	','            reduce using rule 15
	'??'           reduce using rule 15
	'=='           reduce using rule 15
	'!='           reduce using rule 15
	'>'            reduce using rule 15
	'<'            reduce using rule 15
	'<='           reduce using rule 15
	'>='           reduce using rule 15
	'&&'           reduce using rule 15
	'||'           reduce using rule 15
	'}'            reduce using rule 15
	'{{'           reduce using rule 15
	'}}'           reduce using rule 15
	']'            reduce using rule 15
	')'            reduce using rule 15
	%eof           reduce using rule 15


State 6

	atom -> num_lit .                                   (rule 16)

	'in'           reduce using rule 16
	','            reduce using rule 16
	'??'           reduce using rule 16
	'=='           reduce using rule 16
	'!='           reduce using rule 16
	'>'            reduce using rule 16
	'<'            reduce using rule 16
	'<='           reduce using rule 16
	'>='           reduce using rule 16
	'&&'           reduce using rule 16
	'||'           reduce using rule 16
	'}'            reduce using rule 16
	'{{'           reduce using rule 16
	'}}'           reduce using rule 16
	']'            reduce using rule 16
	')'            reduce using rule 16
	%eof           reduce using rule 16


State 7

	atom -> boolean .                                   (rule 17)

	'in'           reduce using rule 17
	','            reduce using rule 17
	'??'           reduce using rule 17
	'=='           reduce using rule 17
	'!='           reduce using rule 17
	'>'            reduce using rule 17
	'<'            reduce using rule 17
	'<='           reduce using rule 17
	'>='           reduce using rule 17
	'&&'           reduce using rule 17
	'||'           reduce using rule 17
	'}'            reduce using rule 17
	'{{'           reduce using rule 17
	'}}'           reduce using rule 17
	']'            reduce using rule 17
	')'            reduce using rule 17
	%eof           reduce using rule 17


State 8

	atom -> null .                                      (rule 18)

	'in'           reduce using rule 18
	','            reduce using rule 18
	'??'           reduce using rule 18
	'=='           reduce using rule 18
	'!='           reduce using rule 18
	'>'            reduce using rule 18
	'<'            reduce using rule 18
	'<='           reduce using rule 18
	'>='           reduce using rule 18
	'&&'           reduce using rule 18
	'||'           reduce using rule 18
	'}'            reduce using rule 18
	'{{'           reduce using rule 18
	'}}'           reduce using rule 18
	']'            reduce using rule 18
	')'            reduce using rule 18
	%eof           reduce using rule 18


State 9

	atom -> array .                                     (rule 19)

	'in'           reduce using rule 19
	','            reduce using rule 19
	'??'           reduce using rule 19
	'=='           reduce using rule 19
	'!='           reduce using rule 19
	'>'            reduce using rule 19
	'<'            reduce using rule 19
	'<='           reduce using rule 19
	'>='           reduce using rule 19
	'&&'           reduce using rule 19
	'||'           reduce using rule 19
	'}'            reduce using rule 19
	'{{'           reduce using rule 19
	'}}'           reduce using rule 19
	']'            reduce using rule 19
	')'            reduce using rule 19
	%eof           reduce using rule 19


State 10

	atom -> object .                                    (rule 20)

	'in'           reduce using rule 20
	','            reduce using rule 20
	'??'           reduce using rule 20
	'=='           reduce using rule 20
	'!='           reduce using rule 20
	'>'            reduce using rule 20
	'<'            reduce using rule 20
	'<='           reduce using rule 20
	'>='           reduce using rule 20
	'&&'           reduce using rule 20
	'||'           reduce using rule 20
	'}'            reduce using rule 20
	'{{'           reduce using rule 20
	'}}'           reduce using rule 20
	']'            reduce using rule 20
	')'            reduce using rule 20
	%eof           reduce using rule 20


State 11

	atom -> fields .                                    (rule 21)

	'in'           reduce using rule 21
	','            reduce using rule 21
	'??'           reduce using rule 21
	'=='           reduce using rule 21
	'!='           reduce using rule 21
	'>'            reduce using rule 21
	'<'            reduce using rule 21
	'<='           reduce using rule 21
	'>='           reduce using rule 21
	'&&'           reduce using rule 21
	'||'           reduce using rule 21
	'}'            reduce using rule 21
	'{{'           reduce using rule 21
	'}}'           reduce using rule 21
	']'            reduce using rule 21
	')'            reduce using rule 21
	%eof           reduce using rule 21


State 12

	atom -> iff .                                       (rule 22)

	'in'           reduce using rule 22
	','            reduce using rule 22
	'??'           reduce using rule 22
	'=='           reduce using rule 22
	'!='           reduce using rule 22
	'>'            reduce using rule 22
	'<'            reduce using rule 22
	'<='           reduce using rule 22
	'>='           reduce using rule 22
	'&&'           reduce using rule 22
	'||'           reduce using rule 22
	'}'            reduce using rule 22
	'{{'           reduce using rule 22
	'}}'           reduce using rule 22
	']'            reduce using rule 22
	')'            reduce using rule 22
	%eof           reduce using rule 22


State 13

	atom -> range .                                     (rule 23)

	'in'           reduce using rule 23
	','            reduce using rule 23
	'??'           reduce using rule 23
	'=='           reduce using rule 23
	'!='           reduce using rule 23
	'>'            reduce using rule 23
	'<'            reduce using rule 23
	'<='           reduce using rule 23
	'>='           reduce using rule 23
	'&&'           reduce using rule 23
	'||'           reduce using rule 23
	'}'            reduce using rule 23
	'{{'           reduce using rule 23
	'}}'           reduce using rule 23
	']'            reduce using rule 23
	')'            reduce using rule 23
	%eof           reduce using rule 23


State 14

	num_lit -> number .                                 (rule 35)

	'in'           reduce using rule 35
	','            reduce using rule 35
	'??'           reduce using rule 35
	'=='           reduce using rule 35
	'!='           reduce using rule 35
	'>'            reduce using rule 35
	'<'            reduce using rule 35
	'<='           reduce using rule 35
	'>='           reduce using rule 35
	'&&'           reduce using rule 35
	'||'           reduce using rule 35
	'}'            reduce using rule 35
	'{{'           reduce using rule 35
	'}}'           reduce using rule 35
	']'            reduce using rule 35
	')'            reduce using rule 35
	%eof           reduce using rule 35


State 15

	num_lit -> int .                                    (rule 36)

	'in'           reduce using rule 36
	','            reduce using rule 36
	'??'           reduce using rule 36
	'=='           reduce using rule 36
	'!='           reduce using rule 36
	'>'            reduce using rule 36
	'<'            reduce using rule 36
	'<='           reduce using rule 36
	'>='           reduce using rule 36
	'&&'           reduce using rule 36
	'||'           reduce using rule 36
	'}'            reduce using rule 36
	'{{'           reduce using rule 36
	'}}'           reduce using rule 36
	']'            reduce using rule 36
	')'            reduce using rule 36
	%eof           reduce using rule 36


State 16

	boolean -> 'true' .                                 (rule 37)

	'in'           reduce using rule 37
	','            reduce using rule 37
	'??'           reduce using rule 37
	'=='           reduce using rule 37
	'!='           reduce using rule 37
	'>'            reduce using rule 37
	'<'            reduce using rule 37
	'<='           reduce using rule 37
	'>='           reduce using rule 37
	'&&'           reduce using rule 37
	'||'           reduce using rule 37
	'}'            reduce using rule 37
	'{{'           reduce using rule 37
	'}}'           reduce using rule 37
	']'            reduce using rule 37
	')'            reduce using rule 37
	%eof           reduce using rule 37


State 17

	boolean -> 'false' .                                (rule 38)

	'in'           reduce using rule 38
	','            reduce using rule 38
	'??'           reduce using rule 38
	'=='           reduce using rule 38
	'!='           reduce using rule 38
	'>'            reduce using rule 38
	'<'            reduce using rule 38
	'<='           reduce using rule 38
	'>='           reduce using rule 38
	'&&'           reduce using rule 38
	'||'           reduce using rule 38
	'}'            reduce using rule 38
	'{{'           reduce using rule 38
	'}}'           reduce using rule 38
	']'            reduce using rule 38
	')'            reduce using rule 38
	%eof           reduce using rule 38


State 18

	string_template -> 's"' . string_template_ '"e'     (rule 25)
	string_template -> 's"' . '"e'                      (rule 26)

	'"e'           shift, and enter state 48
	string         shift, and enter state 49
	'{{'           shift, and enter state 50

	string_template_goto state 47

State 19

	null -> 'null' .                                    (rule 39)

	'in'           reduce using rule 39
	','            reduce using rule 39
	'??'           reduce using rule 39
	'=='           reduce using rule 39
	'!='           reduce using rule 39
	'>'            reduce using rule 39
	'<'            reduce using rule 39
	'<='           reduce using rule 39
	'>='           reduce using rule 39
	'&&'           reduce using rule 39
	'||'           reduce using rule 39
	'}'            reduce using rule 39
	'{{'           reduce using rule 39
	'}}'           reduce using rule 39
	']'            reduce using rule 39
	')'            reduce using rule 39
	%eof           reduce using rule 39


State 20

	var -> ident .                                      (rule 24)

	'in'           reduce using rule 24
	'.'            reduce using rule 24
	','            reduce using rule 24
	'?'            reduce using rule 24
	'??'           reduce using rule 24
	'=='           reduce using rule 24
	'!='           reduce using rule 24
	'>'            reduce using rule 24
	'<'            reduce using rule 24
	'<='           reduce using rule 24
	'>='           reduce using rule 24
	'&&'           reduce using rule 24
	'||'           reduce using rule 24
	'}'            reduce using rule 24
	'{{'           reduce using rule 24
	'}}'           reduce using rule 24
	'['            reduce using rule 24
	']'            reduce using rule 24
	'('            reduce using rule 24
	')'            reduce using rule 24
	%eof           reduce using rule 24


State 21

	object -> '{' . object_fields '}'                   (rule 44)
	object -> '{' . '}'                                 (rule 45)

	's"'           shift, and enter state 45
	'}'            shift, and enter state 46

	object_fields  goto state 43
	object_field   goto state 44

State 22

	expr -> '{{' . expr '}}'                            (rule 14)
	iff -> '{{' . 'if' expr '}}' expr '{{' 'else' '}}' expr '{{' 'end' '}}'    (rule 59)
	range -> '{{' . 'range' mident ',' ident ':=' expr '}}' expr '{{' 'end' '}}'    (rule 60)

	number         shift, and enter state 14
	int            shift, and enter state 15
	'true'         shift, and enter state 16
	'false'        shift, and enter state 17
	's"'           shift, and enter state 18
	'if'           shift, and enter state 41
	'null'         shift, and enter state 19
	'range'        shift, and enter state 42
	ident          shift, and enter state 20
	'{'            shift, and enter state 21
	'{{'           shift, and enter state 22
	'['            shift, and enter state 23
	'('            shift, and enter state 24

	expr           goto state 40
	atom           goto state 3
	var            goto state 4
	string_templategoto state 5
	num_lit        goto state 6
	boolean        goto state 7
	null           goto state 8
	array          goto state 9
	object         goto state 10
	fields         goto state 11
	iff            goto state 12
	range          goto state 13

State 23

	array -> '[' . list_elements ']'                    (rule 40)
	array -> '[' . ']'                                  (rule 41)

	number         shift, and enter state 14
	int            shift, and enter state 15
	'true'         shift, and enter state 16
	'false'        shift, and enter state 17
	's"'           shift, and enter state 18
	'null'         shift, and enter state 19
	ident          shift, and enter state 20
	'{'            shift, and enter state 21
	'{{'           shift, and enter state 22
	'['            shift, and enter state 23
	']'            shift, and enter state 39
	'('            shift, and enter state 24

	expr           goto state 37
	atom           goto state 3
	var            goto state 4
	string_templategoto state 5
	num_lit        goto state 6
	boolean        goto state 7
	null           goto state 8
	array          goto state 9
	list_elements  goto state 38
	object         goto state 10
	fields         goto state 11
	iff            goto state 12
	range          goto state 13

State 24

	expr -> '(' . expr ')'                              (rule 13)

	number         shift, and enter state 14
	int            shift, and enter state 15
	'true'         shift, and enter state 16
	'false'        shift, and enter state 17
	's"'           shift, and enter state 18
	'null'         shift, and enter state 19
	ident          shift, and enter state 20
	'{'            shift, and enter state 21
	'{{'           shift, and enter state 22
	'['            shift, and enter state 23
	'('            shift, and enter state 24

	expr           goto state 36
	atom           goto state 3
	var            goto state 4
	string_templategoto state 5
	num_lit        goto state 6
	boolean        goto state 7
	null           goto state 8
	array          goto state 9
	object         goto state 10
	fields         goto state 11
	iff            goto state 12
	range          goto state 13

State 25

	%start_parser -> expr .                             (rule 0)
	expr -> expr . '>' expr                             (rule 1)
	expr -> expr . '<' expr                             (rule 2)
	expr -> expr . '>=' expr                            (rule 3)
	expr -> expr . '<=' expr                            (rule 4)
	expr -> expr . '!=' expr                            (rule 5)
	expr -> expr . '==' expr                            (rule 6)
	expr -> expr . '&&' expr                            (rule 7)
	expr -> expr . '||' expr                            (rule 8)
	expr -> expr . 'in' expr                            (rule 9)
	expr -> expr . '??' expr                            (rule 10)

	'in'           shift, and enter state 26
	'??'           shift, and enter state 27
	'=='           shift, and enter state 28
	'!='           shift, and enter state 29
	'>'            shift, and enter state 30
	'<'            shift, and enter state 31
	'<='           shift, and enter state 32
	'>='           shift, and enter state 33
	'&&'           shift, and enter state 34
	'||'           shift, and enter state 35
	%eof           accept


State 26

	expr -> expr 'in' . expr                            (rule 9)

	number         shift, and enter state 14
	int            shift, and enter state 15
	'true'         shift, and enter state 16
	'false'        shift, and enter state 17
	's"'           shift, and enter state 18
	'null'         shift, and enter state 19
	ident          shift, and enter state 20
	'{'            shift, and enter state 21
	'{{'           shift, and enter state 22
	'['            shift, and enter state 23
	'('            shift, and enter state 24

	expr           goto state 89
	atom           goto state 3
	var            goto state 4
	string_templategoto state 5
	num_lit        goto state 6
	boolean        goto state 7
	null           goto state 8
	array          goto state 9
	object         goto state 10
	fields         goto state 11
	iff            goto state 12
	range          goto state 13

State 27

	expr -> expr '??' . expr                            (rule 10)

	number         shift, and enter state 14
	int            shift, and enter state 15
	'true'         shift, and enter state 16
	'false'        shift, and enter state 17
	's"'           shift, and enter state 18
	'null'         shift, and enter state 19
	ident          shift, and enter state 20
	'{'            shift, and enter state 21
	'{{'           shift, and enter state 22
	'['            shift, and enter state 23
	'('            shift, and enter state 24

	expr           goto state 88
	atom           goto state 3
	var            goto state 4
	string_templategoto state 5
	num_lit        goto state 6
	boolean        goto state 7
	null           goto state 8
	array          goto state 9
	object         goto state 10
	fields         goto state 11
	iff            goto state 12
	range          goto state 13

State 28

	expr -> expr '==' . expr                            (rule 6)

	number         shift, and enter state 14
	int            shift, and enter state 15
	'true'         shift, and enter state 16
	'false'        shift, and enter state 17
	's"'           shift, and enter state 18
	'null'         shift, and enter state 19
	ident          shift, and enter state 20
	'{'            shift, and enter state 21
	'{{'           shift, and enter state 22
	'['            shift, and enter state 23
	'('            shift, and enter state 24

	expr           goto state 87
	atom           goto state 3
	var            goto state 4
	string_templategoto state 5
	num_lit        goto state 6
	boolean        goto state 7
	null           goto state 8
	array          goto state 9
	object         goto state 10
	fields         goto state 11
	iff            goto state 12
	range          goto state 13

State 29

	expr -> expr '!=' . expr                            (rule 5)

	number         shift, and enter state 14
	int            shift, and enter state 15
	'true'         shift, and enter state 16
	'false'        shift, and enter state 17
	's"'           shift, and enter state 18
	'null'         shift, and enter state 19
	ident          shift, and enter state 20
	'{'            shift, and enter state 21
	'{{'           shift, and enter state 22
	'['            shift, and enter state 23
	'('            shift, and enter state 24

	expr           goto state 86
	atom           goto state 3
	var            goto state 4
	string_templategoto state 5
	num_lit        goto state 6
	boolean        goto state 7
	null           goto state 8
	array          goto state 9
	object         goto state 10
	fields         goto state 11
	iff            goto state 12
	range          goto state 13

State 30

	expr -> expr '>' . expr                             (rule 1)

	number         shift, and enter state 14
	int            shift, and enter state 15
	'true'         shift, and enter state 16
	'false'        shift, and enter state 17
	's"'           shift, and enter state 18
	'null'         shift, and enter state 19
	ident          shift, and enter state 20
	'{'            shift, and enter state 21
	'{{'           shift, and enter state 22
	'['            shift, and enter state 23
	'('            shift, and enter state 24

	expr           goto state 85
	atom           goto state 3
	var            goto state 4
	string_templategoto state 5
	num_lit        goto state 6
	boolean        goto state 7
	null           goto state 8
	array          goto state 9
	object         goto state 10
	fields         goto state 11
	iff            goto state 12
	range          goto state 13

State 31

	expr -> expr '<' . expr                             (rule 2)

	number         shift, and enter state 14
	int            shift, and enter state 15
	'true'         shift, and enter state 16
	'false'        shift, and enter state 17
	's"'           shift, and enter state 18
	'null'         shift, and enter state 19
	ident          shift, and enter state 20
	'{'            shift, and enter state 21
	'{{'           shift, and enter state 22
	'['            shift, and enter state 23
	'('            shift, and enter state 24

	expr           goto state 84
	atom           goto state 3
	var            goto state 4
	string_templategoto state 5
	num_lit        goto state 6
	boolean        goto state 7
	null           goto state 8
	array          goto state 9
	object         goto state 10
	fields         goto state 11
	iff            goto state 12
	range          goto state 13

State 32

	expr -> expr '<=' . expr                            (rule 4)

	number         shift, and enter state 14
	int            shift, and enter state 15
	'true'         shift, and enter state 16
	'false'        shift, and enter state 17
	's"'           shift, and enter state 18
	'null'         shift, and enter state 19
	ident          shift, and enter state 20
	'{'            shift, and enter state 21
	'{{'           shift, and enter state 22
	'['            shift, and enter state 23
	'('            shift, and enter state 24

	expr           goto state 83
	atom           goto state 3
	var            goto state 4
	string_templategoto state 5
	num_lit        goto state 6
	boolean        goto state 7
	null           goto state 8
	array          goto state 9
	object         goto state 10
	fields         goto state 11
	iff            goto state 12
	range          goto state 13

State 33

	expr -> expr '>=' . expr                            (rule 3)

	number         shift, and enter state 14
	int            shift, and enter state 15
	'true'         shift, and enter state 16
	'false'        shift, and enter state 17
	's"'           shift, and enter state 18
	'null'         shift, and enter state 19
	ident          shift, and enter state 20
	'{'            shift, and enter state 21
	'{{'           shift, and enter state 22
	'['            shift, and enter state 23
	'('            shift, and enter state 24

	expr           goto state 82
	atom           goto state 3
	var            goto state 4
	string_templategoto state 5
	num_lit        goto state 6
	boolean        goto state 7
	null           goto state 8
	array          goto state 9
	object         goto state 10
	fields         goto state 11
	iff            goto state 12
	range          goto state 13

State 34

	expr -> expr '&&' . expr                            (rule 7)

	number         shift, and enter state 14
	int            shift, and enter state 15
	'true'         shift, and enter state 16
	'false'        shift, and enter state 17
	's"'           shift, and enter state 18
	'null'         shift, and enter state 19
	ident          shift, and enter state 20
	'{'            shift, and enter state 21
	'{{'           shift, and enter state 22
	'['            shift, and enter state 23
	'('            shift, and enter state 24

	expr           goto state 81
	atom           goto state 3
	var            goto state 4
	string_templategoto state 5
	num_lit        goto state 6
	boolean        goto state 7
	null           goto state 8
	array          goto state 9
	object         goto state 10
	fields         goto state 11
	iff            goto state 12
	range          goto state 13

State 35

	expr -> expr '||' . expr                            (rule 8)

	number         shift, and enter state 14
	int            shift, and enter state 15
	'true'         shift, and enter state 16
	'false'        shift, and enter state 17
	's"'           shift, and enter state 18
	'null'         shift, and enter state 19
	ident          shift, and enter state 20
	'{'            shift, and enter state 21
	'{{'           shift, and enter state 22
	'['            shift, and enter state 23
	'('            shift, and enter state 24

	expr           goto state 80
	atom           goto state 3
	var            goto state 4
	string_templategoto state 5
	num_lit        goto state 6
	boolean        goto state 7
	null           goto state 8
	array          goto state 9
	object         goto state 10
	fields         goto state 11
	iff            goto state 12
	range          goto state 13

State 36

	expr -> expr . '>' expr                             (rule 1)
	expr -> expr . '<' expr                             (rule 2)
	expr -> expr . '>=' expr                            (rule 3)
	expr -> expr . '<=' expr                            (rule 4)
	expr -> expr . '!=' expr                            (rule 5)
	expr -> expr . '==' expr                            (rule 6)
	expr -> expr . '&&' expr                            (rule 7)
	expr -> expr . '||' expr                            (rule 8)
	expr -> expr . 'in' expr                            (rule 9)
	expr -> expr . '??' expr                            (rule 10)
	expr -> '(' expr . ')'                              (rule 13)

	'in'           shift, and enter state 26
	'??'           shift, and enter state 27
	'=='           shift, and enter state 28
	'!='           shift, and enter state 29
	'>'            shift, and enter state 30
	'<'            shift, and enter state 31
	'<='           shift, and enter state 32
	'>='           shift, and enter state 33
	'&&'           shift, and enter state 34
	'||'           shift, and enter state 35
	')'            shift, and enter state 79


State 37

	expr -> expr . '>' expr                             (rule 1)
	expr -> expr . '<' expr                             (rule 2)
	expr -> expr . '>=' expr                            (rule 3)
	expr -> expr . '<=' expr                            (rule 4)
	expr -> expr . '!=' expr                            (rule 5)
	expr -> expr . '==' expr                            (rule 6)
	expr -> expr . '&&' expr                            (rule 7)
	expr -> expr . '||' expr                            (rule 8)
	expr -> expr . 'in' expr                            (rule 9)
	expr -> expr . '??' expr                            (rule 10)
	list_elements -> expr .                             (rule 42)

	'in'           shift, and enter state 26
	','            reduce using rule 42
	'??'           shift, and enter state 27
	'=='           shift, and enter state 28
	'!='           shift, and enter state 29
	'>'            shift, and enter state 30
	'<'            shift, and enter state 31
	'<='           shift, and enter state 32
	'>='           shift, and enter state 33
	'&&'           shift, and enter state 34
	'||'           shift, and enter state 35
	']'            reduce using rule 42


State 38

	array -> '[' list_elements . ']'                    (rule 40)
	list_elements -> list_elements . ',' expr           (rule 43)

	','            shift, and enter state 77
	']'            shift, and enter state 78


State 39

	array -> '[' ']' .                                  (rule 41)

	'in'           reduce using rule 41
	','            reduce using rule 41
	'??'           reduce using rule 41
	'=='           reduce using rule 41
	'!='           reduce using rule 41
	'>'            reduce using rule 41
	'<'            reduce using rule 41
	'<='           reduce using rule 41
	'>='           reduce using rule 41
	'&&'           reduce using rule 41
	'||'           reduce using rule 41
	'}'            reduce using rule 41
	'{{'           reduce using rule 41
	'}}'           reduce using rule 41
	']'            reduce using rule 41
	')'            reduce using rule 41
	%eof           reduce using rule 41


State 40

	expr -> expr . '>' expr                             (rule 1)
	expr -> expr . '<' expr                             (rule 2)
	expr -> expr . '>=' expr                            (rule 3)
	expr -> expr . '<=' expr                            (rule 4)
	expr -> expr . '!=' expr                            (rule 5)
	expr -> expr . '==' expr                            (rule 6)
	expr -> expr . '&&' expr                            (rule 7)
	expr -> expr . '||' expr                            (rule 8)
	expr -> expr . 'in' expr                            (rule 9)
	expr -> expr . '??' expr                            (rule 10)
	expr -> '{{' expr . '}}'                            (rule 14)
